manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: demo-otus
spec:
    replicas: 2
    selector:
      matchLabels:
        app: demo-otus
    template:
      metadata:
          labels:
            app: demo-otus
      spec:
          containers:
          - name: simple-web
            image: yeasy/simple-web:latest
            ports:
              - name: web 
                containerPort: 8000
            resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
