manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-otus
spec:
  selector:
    app: demo-otus
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
