manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-otus
  annotations:
    kubernetes.io/ingress.class: "nginx"               
spec:
  rules:
  - host: demo.otus.app
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: hello-service
              port:
                number: 8000
